Fix indentation and change subject text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <input id="email" type="email" placeholder="me@me.com" name="email" required>
             </div>
             <div class="unit xs-1 s-1 m-1 l-1-2 push pad-l">
-              <label for="subject">Subject</label>
+              <label for="subject">Physical fitness</label>
               <select id="subject" name="_subject">
                 <option>Super-human</option>
                 <option>Fit as a fiddle</option>
@@ -62,11 +62,8 @@
             <div>
               <input type="hidden" name="_subject" value="Request to join the mission">
             </div>
-
-
           </div>
         </fieldset>
-
 
       </form>
     </div>
