Add text attributes to legends

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <form method="POST" action="https://formspree.io/briaksherman@gmail.com">
         <fieldset>
-          <legend>Personal details</legend>
+          <legend class="mega italic">Personal details</legend>
           <div class="grid">
             <div class="pad-r unit xs-1 s-1 m-1 l-1-2">
               <label for="name">Name</label>
@@ -50,7 +50,7 @@
         </fieldset>
 
         <fieldset>
-          <legend>Mission statement</legend>
+          <legend class="mega italic">Mission statement</legend>
           <div class="grid">
             <div class="unit xs-1 s-1 m-1 l-1">
               <label for="text">Why do you want to go to Mars?</label>
