--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
               <textarea id="text" name="mission" required></textarea>
             </div>
             <div class="unit xs-1 s-1 m-1 l-1 text-center">
-              <button type="submit">Register for the trip!</button>
-            </div>
-            <div>
-              <input type="hidden" name="_subject" value="Request to join the mission">
+              <button class="btn" type="submit">Register for the trip!</button>
             </div>
           </div>
         </fieldset>
+
+        <div>
+          <input type="hidden" name="_subject" value="Request to join the mission">
+        </div>
 
       </form>
     </div>
