--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <section>
-    <form method="POST" action="https://formspree.io/briaksherman@gmail.com">
+    <form class="gutter max-length" method="POST" action="https://formspree.io/briaksherman@gmail.com">
       <div class="max-length">
         <h1>Want to go to Mars?</h1>
         <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
@@ -48,15 +48,15 @@
           </div>
         </fieldset>
 
-        <fieldset>
+        <fieldset class="push-0">
           <legend class="mega italic">Mission statement</legend>
           <div class="grid">
-            <div class="unit xs-1 s-1 m-1 l-1">
+            <div class="push unit xs-1 s-1 m-1 l-1">
               <label for="text">Why do you want to go to Mars?</label>
               <textarea id="text" name="mission" required></textarea>
             </div>
             <div class="unit xs-1 s-1 m-1 l-1 text-center">
-              <button class="btn" type="submit">Register for the trip!</button>
+              <button class="btn padding push" type="submit">Register for the trip!</button>
             </div>
           </div>
         </fieldset>
