Add top padding

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
   <section>
-    <form class="gutter max-length" method="POST" action="https://formspree.io/briaksherman@gmail.com">
+    <form class="gutter" method="POST" action="https://formspree.io/briaksherman@gmail.com">
       <div class="max-length">
-        <h1>Want to go to Mars?</h1>
+        <h1 class="pad-t">Want to go to Mars?</h1>
         <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
         <fieldset>
           <legend class="mega italic">Personal details</legend>
