Add push attribute to units

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <fieldset>
           <legend class="mega italic">Personal details</legend>
           <div class="grid">
-            <div class="pad-r unit xs-1 s-1 m-1 l-1-2">
+            <div class="push pad-r unit xs-1 s-1 m-1 l-1-2">
               <label for="name">Name</label>
               <input id="name" name="name">
             </div>
-            <div class="unit xs-1 s-1 m-1 l-1-2 pad-l">
+            <div class="push unit xs-1 s-1 m-1 l-1-2 pad-l">
               <label for="age">Age</label>
               <input id="age" name="age">
             </div>
-            <div class="unit xs-1 s-1 m-1 l-1-2 pad-r">
+            <div class="push unit xs-1 s-1 m-1 l-1-2 pad-r">
               <label for="email">Email</label>
               <input id="email" type="email" placeholder="me@me.com" name="email" required>
             </div>
-            <div class="unit xs-1 s-1 m-1 l-1-2 push pad-l">
+            <div class="push unit xs-1 s-1 m-1 l-1-2 push pad-l">
               <label for="subject">Physical fitness</label>
               <select id="subject" name="_subject">
                 <option>Super-human</option>
@@ -49,7 +49,7 @@
         </fieldset>
 
         <fieldset class="push-0">
-          <legend class="mega italic">Mission statement</legend>
+          <legend class="push smega italic">Mission statement</legend>
           <div class="grid">
             <div class="push unit xs-1 s-1 m-1 l-1">
               <label for="text">Why do you want to go to Mars?</label>
