Add push to legend

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="pad-t">Want to go to Mars?</h1>
         <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
         <fieldset>
-          <legend class="mega italic">Personal details</legend>
+          <legend class="push mega italic">Personal details</legend>
           <div class="grid">
             <div class="push pad-r unit xs-1 s-1 m-1 l-1-2">
               <label for="name">Name</label>
