--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section>
     <form class="gutter" method="POST" action="https://formspree.io/briaksherman@gmail.com">
       <div class="max-length">
-        <h1 class="pad-t">Want to go to Mars?</h1>
+        <h1 class="pad-t-2">Want to go to Mars?</h1>
         <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
         <fieldset>
           <legend class="push mega italic">Personal details</legend>
@@ -56,7 +56,7 @@
               <textarea id="text" name="mission" required></textarea>
             </div>
             <div class="unit xs-1 s-1 m-1 l-1 text-center">
-              <button class="btn padding push" type="submit">Register for the trip!</button>
+              <button class="btn padding push-2" type="submit">Register for the trip!</button>
             </div>
           </div>
         </fieldset>
