Change font size

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form class="gutter" method="POST" action="https://formspree.io/briaksherman@gmail.com">
       <div class="max-length">
         <h1 class="pad-t-2">Want to go to Mars?</h1>
-        <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
+        <p class="mega">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
         <fieldset>
           <legend class="push mega italic">Personal details</legend>
           <div class="grid">
